check image directory and create it if necessary.

BUG: 100312

svn path=/trunk/extragear/multimedia/k3b/; revision=519980